clvr-back/envoy/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9090 }

static_resources:
  listeners:
    - name: envoy_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8088
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                upgrade_configs:
                  - upgrade_type: websocket
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: [ "*" ]
                      routes:
                        - match:
                            prefix: "/login"
                          route:
                            cluster: main_server
                        - match:
                            prefix: "/register"
                          route:
                            cluster: main_server
                        - match:
                            prefix: "/user"
                          route:
                            cluster: main_server
                        - match:
                            prefix: "/logout"
                          route:
                            cluster: main_server
                        - match:
                            prefix: "/tic-tac-toe"
                          route:
                            cluster: main_server
                        - match:
                            prefix: "/nekahoot"
                          route:
                            cluster: main_server
                        - match:
                            prefix: "/ws"
                          route:
                            cluster: main_server
                        - match:
                            prefix: "/"
                          route:
                            cluster: web_static_server
  clusters:
    - name: web_static_server
      connect_timeout: 60s
      type: logical_dns
      load_assignment:
        cluster_name: web_static_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.0.71
                      port_value: 3000
    - name: main_server
      connect_timeout: 60s
      type: logical_dns
      load_assignment:
        cluster_name: main_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.0.71
                      port_value: 8080
